# TokenTrace

./: .editorconfig  .gitignore  .tokentracer.toml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  register-task.ps1  register-task.sh  requirements.txt  tracker.py
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-2-report.md  task-5-report.md
aitoken/: __init__.py  config.py  pipeline.py  store.py
aitoken/collectors/: __init__.py  claude_cli.py  copilot_cli.py
docs/: ARCHITECTURE.md  DESIGN-HISTORY.md  new-names.txt
docs/design/: dashboard.html
docs/plans/: 2026-06-15-copilot-usage-tracker-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.jsx  api.js
src/: config.py  model_aliases.toml  model_normalize.py  models.py  pipeline.py  project_identity.py  repo_identity.py  report.py  store.py
tests/: conftest.py  test_claude_cli_collector.py  test_cli_collector.py  test_config.py  test_config_stores.py  test_context.py  test_dashboard_command.py  test_dashboard_daemon.py  test_dashboard_queries.py  test_dashboard_server.py  test_middleware_model_normalize.py  test_model_normalize.py  test_models.py  test_pipeline.py  test_pipeline_multi_store.py  test_project_identity.py  test_project_resolver.py  test_repo_identity.py  test_sqlite_canonical_model.py  test_sqlite_resync.py  test_sqlite_run_log.py  test_store_report.py  test_stores_protocol.py  test_stores_registry.py  test_supabase_store.py  test_sync_command.py  test_sync_excludes_identities.py  test_tracker_cli.py
(+73 files in other folders)
