[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokentracer"
version = "0.5.2"
description = "Local token usage tracker for AI CLI tools (Claude Code, GitHub Copilot)"
readme = "README.md"
license = "LicenseRef-PolyForm-Shield-1.0.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.11"
keywords = ["claude", "copilot", "tokens", "ai", "usage", "tracker"]

[project.scripts]
tokentracer = "tracker:main"

[project.entry-points."tokentracer.stores"]
sqlite = "src.stores.sqlite:SqliteStore"
supabase = "src.stores.supabase:SupabaseStore"

[project.optional-dependencies]
supabase = ["supabase>=2.0"]

[tool.setuptools]
py-modules = ["tracker"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["model_aliases.toml"]
